--- a/client/index.html
+++ b/client/index.html
@@ -9,18 +9,39 @@
 		<script src="src/controller.js"></script>
 	</head>
 <body ng-controller="BeerListCtrl">
-  <ul>
-    <li ng-repeat="keg in kegs">
-      <div>Tap: {{keg.tap}}</div>
-      <div><label>beer name</label>{{keg.beer.name}}</div>
-      <div>description<p>{{keg.beer.description}}</p></div>
-      <div><label>srm</label>{{keg.beer.srm}}</div>
-      <div><label>ibu</label>{{keg.beer.ubv}}</div>
-      <div><label>abv</label>{{keg.beer.abv}}</div>
-      <div>Current ml: {{keg.current_ml}}</div>
-      
-    </li>
-  </ul>
-  
+<header class="topHeader">Today we have 6 types of beer for you</header>
+    <div class="beerSection">
+        <div class="beer-field" ng-repeat="keg in kegs">
+            <div class="pour type1"></div>
+            <div class="beaker">
+                <div class="beer-foam">
+                    <div class="foam-1"></div>
+                    <div class="foam-2"></div>
+                    <div class="foam-3"></div>
+                    <div class="foam-4"></div>
+                    <div class="foam-5"></div>
+                </div>
+                <div class="liquid type1">
+                    <div class="foam"></div>
+                    <div class="bubble bubble1"></div>
+                    <div class="bubble bubble2"></div>
+                    <div class="bubble bubble3"></div>
+                    <div class="bubble bubble4"></div>
+                    <div class="bubble bubble5"></div>
+                </div>
+
+            </div>
+            <div class="beerDescription">
+                <div>NAME: {{keg.beer.name}}</div>
+                <!--<div>Brewery: {{keg.beer.description}}</div>-->
+                <!--<div>Type: Pilsner</div>-->
+                <div>COLOR: {{keg.beer.srm}}</div>
+                <div>UBV: {{keg.beer.ubv}}</div>
+                <div>ABV: {{keg.beer.abv}}</div>
+                <div>Tap: {{keg.tap}}</div>
+                <div>Current ml: {{keg.current_ml}}</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
