add missed resources

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html ng-app="keezerApp">
 	<head>
+    <link rel="stylesheet" href="stylesheets/main.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>	
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
 		<script src="src/angular-resource.js"></script>
 		<script src="src/keezerApp.js"></script>
 		<script src="src/lbServices.js"></script>
 		<script src="src/controller.js"></script>
+    
+    
 	</head>
 <body ng-controller="BeerListCtrl">
 <header class="topHeader">Today we have 6 types of beer for you</header>
@@ -44,4 +48,5 @@
         </div>
     </div>
 </body>
+  <script src="src/animation.js"></script>  
 </html>
