Added styles for beer colors

--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
             <div class="beerDescription">
                 <div>NAME: {{keg.beer.name}}</div>
                 <!--<div>Brewery: {{keg.beer.description}}</div>-->
-                <!--<div>Type: Pilsner</div>-->
+                <!--<div>Type: Pilsner</div>-->  <!-- e.g. style -->
                 <div>COLOR: {{keg.beer.srm}}</div>
                 <div>UBV: {{keg.beer.ubv}}</div>
                 <div>ABV: {{keg.beer.abv}}</div>
