add custom type, remove unused dep

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="keezerApp">
 	<head>
+    <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="stylesheets/srm.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
