--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="stylesheets/srm.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
     <script src="https://code.angularjs.org/1.2.26/angular-animate.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+    <script src="libs/d3.js"></script>
+    <script src="libs/line-chart.js"></script>
 		<script src="src/angular-resource.js"></script>
 		<script src="src/keezerApp.js"></script>
 		<script src="src/lbServices.js"></script>
