place back twitter button

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,9 @@
     <script src="src/controllers/admin/entities_controller.js"></script>
 </head>
 <body>
-  <div ng-view></div>
+    <div ng-view></div>
+    <a href="https://twitter.com/BrazosKeezer" class="twitter-follow-button" data-show-count="false">Follow @BrazosKeezer</a>
 </body>
-  <script src="src/animation.js"></script>
+    <script src="src/animation.js"></script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </html>
