Add https to resourses

--- a/client/index.html
+++ b/client/index.html
@@ -1,22 +1,20 @@
 <!doctype html>
 <html ng-app="keezerApp">
 	<head>
-    <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="stylesheets/main.css">
-    <link rel="stylesheet" href="stylesheets/srm.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
-    <script src="https://code.angularjs.org/1.2.26/angular-animate.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
-    <script src="libs/d3.js"></script>
-    <script src="libs/line-chart.js"></script>
-		<script src="src/angular-resource.js"></script>
-		<script src="src/keezerApp.js"></script>
-		<script src="src/lbServices.js"></script>
-		<script src="src/controller.js"></script>
-    
-    
+        <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="stylesheets/main.css">
+        <link rel="stylesheet" href="stylesheets/srm.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
+        <script src="https://code.angularjs.org/1.2.26/angular-animate.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+        <script src="libs/d3.js"></script>
+        <script src="libs/line-chart.js"></script>
+        <script src="src/angular-resource.js"></script>
+        <script src="src/keezerApp.js"></script>
+        <script src="src/lbServices.js"></script>
+        <script src="src/controller.js"></script>
 	</head>
 <body>
   <div ng-view></div>
